# tiny-hookd

./: .env.example  .gitignore  Dockerfile  Dockerfile.webhookd  README.md  docker-compose.yml  filebrowser.json
lib/: pyproject.toml
lib/tiny_hookd/: __init__.py  cli.py  llm.py
scripts/: example.js  example.py  example.sh
scripts/examples/: ask-llm.sh  chat-bot.js  code-review.py  extract.py  generate-sql.js  hello.sh  sentiment.py  summarize.py  translate.py  webhook-router.js
scripts/lib/: __init__.py  llm.js  llm.py
scripts/qodo/: describe.sh  full-suite.sh  github-webhook.py  improve.sh  review.sh
